[package]
name = "advent-of-code-2018"
version = "0.1.0"
authors = ["Prakhar Srivastav <prsrivastav@google.com>"]

[dependencies]
itertools = "0.7"
regex = "1"
md5 = "0.6"
lazy_static = "1.2.0"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"
